--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,10 +2,10 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 debug=true
 spring.datasource.url=jdbc:oracle:thin:@192.168.1.165:1521:wtps
-#spring.datasource.username=wtpsuat
-#spring.datasource.password=uat890
-spring.datasource.username=wtps
-spring.datasource.password=itps4pa1
+spring.datasource.username=wtpsuat
+spring.datasource.password=uat890
+#spring.datasource.username=wtps
+#spring.datasource.password=itps4pa1
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
 spring.jpa.database-platform=org.hibernate.dialect.Oracle10gDialect
 
