Features for online portal and few issue fixes
New services for online portal and few issue fixes.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,6 +20,8 @@ logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} %-5level %logger{36} - %msg%n
 logging.level.org.hibernate.SQL=debug
 # Set Server Port for embedded tomcat
 server.port=8085
+#server.ssl.certificate = classpath:ssl/pai.crt
+#server.ssl.certificate-private-key = classpath:ssl/pk.key
 # Application context uri for embedded tomcat only
 server.servlet.context-path=/feas
 
